# claude-session-viewer

./: .gitignore  PKGBUILD  README.md  pyproject.toml
resources/: org.kde.claudesessionviewer.desktop  org.kde.claudesessionviewer.metainfo.xml  org.kde.claudesessionviewer.notifyrc
src/claude_session_viewer/: __init__.py  __main__.py  app.py
src/claude_session_viewer/models/: __init__.py  conversation_model.py  project_model.py  search_result_model.py  session_model.py
src/claude_session_viewer/qml/: ChatHistoryView.qml  Main.qml
src/claude_session_viewer/services/: __init__.py  chunk_builder.py  config_manager.py  context_analyzer.py  file_watcher.py  git_resolver.py  jsonl_parser.py  metadata_cache.py  notification_manager.py  pane_manager.py  search_engine.py  session_manager.py  (+3 more)
tests/: conftest.py  helpers.py  test_active_session.py  test_app_integration.py  test_chunk_builder.py  test_config_manager.py  test_content_sanitizer.py  test_context_analyzer.py  test_conversation_model_incremental.py  test_date_grouping.py  test_diff_generator.py  test_file_watcher.py  test_git_resolver.py  test_jsonl_parser.py  test_live_tailing.py  test_message_classifier.py  test_metadata_cache.py  test_models.py  test_notification_manager.py  test_pane_manager.py  test_path_codec.py  test_path_validation.py  test_regex_validator.py  test_search_engine.py  test_session_manager.py  test_subagent_resolver.py  test_tool_linker.py
tests/fixtures/: malformed_session.jsonl  session_with_compaction.jsonl  session_with_subagents.jsonl  session_with_tools.jsonl  simple_session.jsonl
(+39 files in other folders)
