[build-system]
requires = ["setuptools>=69.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-session-viewer"
version = "1.1.0"
description = "Native KDE Plasma 6 viewer for Claude Code session logs"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Peter"}]

dependencies = [
    "PySide6>=6.10",
    "orjson>=3.10",
    "asyncssh>=2.14",
    "dbus-next>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
claude-session-viewer = "claude_session_viewer.__main__:main"

[project.gui-scripts]
claude-session-viewer-gui = "claude_session_viewer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["claude_session_viewer"]
omit = ["*/qml/*", "*/__main__.py", "*/app.py"]

[tool.coverage.report]
show_missing = true
fail_under = 85
